# fastapi-auth-middleware

./: .gitignore  404.html  CNAME  LICENSE  README.md  example.py  index.html  jwtRS256.key  jwtRS256.key.pub  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: testing.yaml
api-reference/: index.html
api-reference/auth-backend/: index.html
api-reference/auth-middleware/: index.html
api-reference/user/: index.html
docs/: mkdocs.yml
docs/docs/: README.md  index.md
docs/docs/api-reference/: auth-backend.md  auth-middleware.md  oauth2.md  user.md
docs/docs/examples/: index.md  multiple.md  oauth2.md  oauth2_automatic_renewal.md  simple_with_scopes.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/site/api-reference/auth-backend/: index.html
docs/site/api-reference/auth-middleware/: index.html
docs/site/api-reference/user/: index.html
docs/site/examples/: index.html
docs/site/search/: search_index.json
examples/: custom_with_scopes.py  index.html  multiple.py  oauth2.py  oauth2_automatic_renewal.py  oauth2_without_renewal.py  simple.py  simple_with_scopes.py
examples/multiple/: index.html
examples/simple_with_scopes/: index.html
fastapi_auth/: middleware.py
fastapi_auth_middleware/: __init__.py  exceptions.py  middleware.py  oauth2_middleware.py  requirements.txt
introduction/: index.html
search/: search_index.json
tests/: .coveragerc  basic_fastapi_app.py  custom_oauth2_fastapi_app.py  keys.py  pytest.ini  requirements.txt  test_basic.py  test_middleware.py  test_oauth2_middleware.py  ~
(+1 files in other folders)
